@@ -58,7 +58,7 @@ Description: Audio player and music collection organizer
   - Edit tags on music files
   - Fetch tags from MusicBrainz
   - Album cover art from Lastfm, Musicbrainz, Discogs, Deezer and Tidal
-  - Song lyrics from AudD and ChartLyrics
+  - Song lyrics from AudD
   - Support for multiple backends
   - Audio analyzer
   - Audio equalizer
