@@ -27,7 +27,7 @@ Features:
 .br
 - Album cover art from Lastfm, Musicbrainz, Discogs, Deezer and Tidal
 .br
-- Song lyrics from AudD and ChartLyrics
+- Song lyrics from AudD
 .br
 - Support for multiple backends
 .br
